python-test.log
Hello World
variable 1: 
Experiment title: test-12532-1-1-115
batch_jobs
config.yaml
datasets
Masterproject.egg-info
MastersThesis
models
MScTemplate
notebooks
packages
pyproject.toml
python-test.log
README.md
requirements.txt
scripts
setup.py
spec
src
tox.ini
venv
Obtaining file:///cluster/home/sjsivert/Masteroppgave (from -r requirements.txt (line 75))
  Installing build dependencies: started
  Installing build dependencies: finished with status 'done'
  Checking if build backend supports build_editable: started
  Checking if build backend supports build_editable: finished with status 'done'
  Getting requirements to build wheel: started
  Getting requirements to build wheel: finished with status 'done'
  Preparing metadata (pyproject.toml): started
  Preparing metadata (pyproject.toml): finished with status 'done'
Obtaining file:///cluster/home/sjsivert/Masteroppgave/packages/permetrics (from -r requirements.txt (line 172))
  Preparing metadata (setup.py): started
  Preparing metadata (setup.py): finished with status 'done'
Collecting argon2-cffi==21.3.0
  Using cached argon2_cffi-21.3.0-py3-none-any.whl (14 kB)
Collecting argon2-cffi-bindings==21.2.0
  Using cached argon2_cffi_bindings-21.2.0-cp36-abi3-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (86 kB)
Requirement already satisfied: args==0.1.0 in ./venv/lib/python3.6/site-packages (from -r requirements.txt (line 4)) (0.1.0)
Collecting arrow==1.2.2
  Using cached arrow-1.2.2-py3-none-any.whl (64 kB)
Collecting astroid==2.9.3
  Using cached astroid-2.9.3-py3-none-any.whl (254 kB)
Collecting asttokens==2.0.5
  Using cached asttokens-2.0.5-py2.py3-none-any.whl (20 kB)
Collecting attrs==21.4.0
  Using cached attrs-21.4.0-py2.py3-none-any.whl (60 kB)
Requirement already satisfied: backcall==0.2.0 in ./venv/lib/python3.6/site-packages (from -r requirements.txt (line 9)) (0.2.0)
Collecting black==22.1.0
  Using cached black-22.1.0-cp36-cp36m-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (1.4 MB)
Requirement already satisfied: bleach==4.1.0 in ./venv/lib/python3.6/site-packages (from -r requirements.txt (line 11)) (4.1.0)
Collecting boto3==1.20.49
  Using cached boto3-1.20.49-py3-none-any.whl (131 kB)
Collecting botocore==1.23.49
  Using cached botocore-1.23.49-py3-none-any.whl (8.5 MB)
Requirement already satisfied: bravado==11.0.3 in ./venv/lib/python3.6/site-packages (from -r requirements.txt (line 14)) (11.0.3)
Requirement already satisfied: bravado-core==5.17.0 in ./venv/lib/python3.6/site-packages (from -r requirements.txt (line 15)) (5.17.0)
Requirement already satisfied: certifi==2021.10.8 in ./venv/lib/python3.6/site-packages (from -r requirements.txt (line 16)) (2021.10.8)
Requirement already satisfied: cffi==1.15.0 in ./venv/lib/python3.6/site-packages (from -r requirements.txt (line 17)) (1.15.0)
Collecting charset-normalizer==2.0.11
  Using cached charset_normalizer-2.0.11-py3-none-any.whl (39 kB)
Requirement already satisfied: click==8.0.3 in ./venv/lib/python3.6/site-packages (from -r requirements.txt (line 19)) (8.0.3)
Requirement already satisfied: clint==0.5.1 in ./venv/lib/python3.6/site-packages (from -r requirements.txt (line 20)) (0.5.1)
Requirement already satisfied: cloudpickle==2.0.0 in ./venv/lib/python3.6/site-packages (from -r requirements.txt (line 21)) (2.0.0)
Requirement already satisfied: confuse==1.7.0 in ./venv/lib/python3.6/site-packages (from -r requirements.txt (line 22)) (1.7.0)
Requirement already satisfied: coverage==6.1.2 in ./venv/lib/python3.6/site-packages (from -r requirements.txt (line 23)) (6.1.2)
Collecting croniter==1.2.0
  Using cached croniter-1.2.0-py2.py3-none-any.whl (17 kB)
Requirement already satisfied: cycler==0.11.0 in ./venv/lib/python3.6/site-packages (from -r requirements.txt (line 25)) (0.11.0)
ERROR: Could not find a version that satisfies the requirement dask==2022.1.1 (from versions: 0.7.4.linux-x86_64, 0.7.5.linux-x86_64, 0.7.6.linux-x86_64, 0.8.1.macosx-10.5-x86_64, 0.2.0, 0.2.1, 0.2.2, 0.2.3, 0.2.4, 0.2.5, 0.2.6, 0.3.0, 0.4.0, 0.5.0, 0.6.0, 0.6.1, 0.7.0, 0.7.1, 0.7.2, 0.7.3, 0.7.4, 0.7.5, 0.7.6, 0.8.0, 0.8.1, 0.8.2, 0.9.0, 0.10.0, 0.10.1, 0.10.2, 0.11.0, 0.11.1, 0.12.0, 0.13.0rc1, 0.13.0, 0.14.0, 0.14.1, 0.14.2, 0.14.3, 0.15.0, 0.15.1, 0.15.2, 0.15.3, 0.15.4, 0.16.0, 0.16.1, 0.17.0, 0.17.1, 0.17.2, 0.17.3, 0.17.4, 0.17.5, 0.18.0, 0.18.1, 0.18.2, 0.19.0, 0.19.1, 0.19.2, 0.19.3, 0.19.4, 0.20.0, 0.20.1, 0.20.2, 1.0.0, 1.1.0, 1.1.1, 1.1.2, 1.1.3, 1.1.4, 1.1.5, 1.2.0, 1.2.1, 1.2.2, 2.0.0, 2.1.0, 2.2.0, 2.3.0, 2.4.0, 2.5.0, 2.5.2, 2.6.0, 2.7.0, 2.8.0, 2.8.1, 2.9.0, 2.9.1, 2.9.2, 2.10.0, 2.10.1, 2.11.0, 2.12.0, 2.13.0, 2.14.0, 2.15.0, 2.16.0, 2.17.0, 2.17.1, 2.17.2, 2.18.0, 2.18.1, 2.19.0, 2.20.0, 2.21.0, 2.22.0, 2.23.0, 2.24.0, 2.25.0, 2.26.0, 2.27.0, 2.28.0, 2.29.0, 2.30.0, 2020.12.0, 2021.1.0, 2021.1.1, 2021.2.0, 2021.3.0)
ERROR: No matching distribution found for dask==2022.1.1
  File "src/main.py", line 1
    from __future__ import annotations
    ^
SyntaxError: future feature annotations is not defined
